2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen-attrs.pks (attr_ios): Add explicative message in
	raised exception.
	(attr_size): Likewise.
	(attr_offset): Likewise.
	(attr_eoffset): Likewise.
	(attr_esize): Likewise.
	(attr_ename): Likewise.
	(attr_elem): Likewise.

2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/array-type-diag-2.pk: New test.

	* libpoke/pkl-anal.c (pkl_anal1_ps_type_array): New handler.
	(pkl_phase_anal1): Install handler.

2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk: s/initially/currently command help string.

2022-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* maps/Makefile.am: Revert last change.
	* poke/poke.c (initialize): Put maps back in pkgdatadir.
	* poke/pk-map.pk: Likewise.

2022-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/Makefile.am (appdir): Define.
	(dist_app_DATA): Rename from dist_pkgdata_DATA.
	* doc/Makefile.am: Install poke's docfiles in appdir.
	* etc/Makefile.am: Likewise.
	* maps/Makefile.am (mapsdir): Likewise.
	* libpoke/pkl-rt.pk: Do not set picklesdir.
	* poke/poke.h: Extern for poke_appdir.
	* poke/poke.c (poke_appdir): New variable.
	(initialize): Honor POKEAPPDIR and set poke_appdir, then
	set load_path.
	* run.in (POKEAPPDIR): Define.
	* testsuite/Makefile.am: Likewise.

2022-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-diff.pk (sdiff): Improve support for non-byte values.
	* testsuite/poke.cmd/sdiff-12.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-02-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_array): Make sure the
	constructed array value has a writer.
	* testsuite/poke.map/ass-map-26.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-diff.pk: Factor a bit.

2022-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-diff.pk (sdiff): Try to emit thunk lines for composite